--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -12,10 +12,12 @@
 
 .theme_cold {
   background-color: #b0d3d1;
+  opacity: 0.7;
 }
 
 .theme_warm {
   background-color: #f7d793;
+  opacity: 0.7;
 }
 
 .App-link {
