--- a/src/components/LocationWeatherCard/LocationWeatherCard.css
+++ b/src/components/LocationWeatherCard/LocationWeatherCard.css
@@ -1,1 +1,12 @@
+.location-card {
+  padding: 20px;
+  text-align: center;
+}
 
+.current-weather__card {
+  text-align: center;
+}
+
+.weekly-weather__card {
+  margin-top: 20px;
+}
