--- a/src/components/AutocompleteInput/AutocompleteInput.css
+++ b/src/components/AutocompleteInput/AutocompleteInput.css
@@ -1,3 +1,8 @@
+.input-wrapper {
+  width: 100%;
+  position: relative;
+}
+
 .input {
   padding: 10px 15px;
   margin: 0;
@@ -15,4 +20,5 @@
 
 .input:focus {
   border: #2be080 1px solid;
+  background-color: #f9f9f9;
 }
