--- a/src/components/DayWeatherCard/DayWeatherCard.css
+++ b/src/components/DayWeatherCard/DayWeatherCard.css
@@ -1,6 +1,8 @@
 .daily-weather {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 5px;
+  border-radius: 4px;
+  box-shadow: 0 0 1px #4056a1, 0 1px 2px #4056a1, 0 1px 2px #4056a1;
 }
