--- a/src/components/LocationWeatherCard/LocationWeatherCard.css
+++ b/src/components/LocationWeatherCard/LocationWeatherCard.css
@@ -5,6 +5,9 @@
 
 .current-weather__card {
   text-align: center;
+  padding: 10px;
+  border-radius: 4px;
+  box-shadow: 0 0 1px #4056a1, 0 1px 2px #4056a1, 0 1px 2px #4056a1;
 }
 
 .weekly-weather__card {
