--- a/src/components/DayWeatherCard/DayWeatherCard.css
+++ b/src/components/DayWeatherCard/DayWeatherCard.css
@@ -6,3 +6,14 @@
   border-radius: 4px;
   box-shadow: 0 0 1px #4056a1, 0 1px 2px #4056a1, 0 1px 2px #4056a1;
 }
+
+.daily-weather__content {
+  margin: 10px 0;
+}
+
+@media screen and (max-width: 767px) {
+  .daily-weather__content {
+    margin-top: 7px;
+    margin-bottom: 7px;
+  }
+}
