fix: added no location found message in case no location matching input value was found

--- a/src/components/DropdownList/DropdownList.css
+++ b/src/components/DropdownList/DropdownList.css
@@ -25,7 +25,11 @@
   transition: font-weight 0.2s ease-in;
 }
 
-.dropdown__item:hover {
+.dropdown__item_active:hover {
   cursor: pointer;
   font-weight: 700;
+}
+
+.dropdown__list_inactive {
+  color: #a0a0a0;
 }
