--- a/src/components/AutocompleteInput/AutocompleteInput.css
+++ b/src/components/AutocompleteInput/AutocompleteInput.css
@@ -4,6 +4,8 @@
 
 .input-wrapper {
   display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .input {
@@ -24,4 +26,24 @@
 .input:focus {
   border: #2be080 1px solid;
   background-color: #f9f9f9;
+}
+
+.input-button {
+  position: absolute;
+  margin-right: 15px;
+  border: none;
+  width: 22px;
+  height: 22px;
+  background-color: transparent;
+  background-image: url(../../icons/close-btn.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  transition: all 0.1s ease-in;
+}
+
+.input-button:hover {
+  cursor: pointer;
+  opacity: 0.7;
+  transform: rotate(15deg);
 }
