--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -45,6 +45,10 @@
   padding-top: 20px;
 }
 
+.error {
+  margin-top: 20px;
+}
+
 @media screen and (max-width: 767px) {
   .App {
     padding: 15px 20px;
