fix: app styles fixed, preloader styles and dropdown list styles fixed

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -50,8 +50,7 @@
 }
 
 .preloader {
-  color: #4056a1;
-  background-color: #4056a1;
+  margin-top: 40px;
 }
 
 @media screen and (max-width: 767px) {
