--- a/src/components/ClearInputButton/ClearInputButton.module.css
+++ b/src/components/ClearInputButton/ClearInputButton.module.css
@@ -5,7 +5,7 @@
   width: 22px;
   height: 22px;
   background-color: transparent;
-  background-image: url(../../icons/close-btn.svg);
+  background-image: url(../../assets/icons/close-btn.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
